--- a/public/match.html
+++ b/public/match.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <video controls id="video"></video>
+  <video controls id="video" autoplay></video>
   <script>
       var video = document.getElementById("video");
       var videoSrc = "<REPLACE>";
