--- a/public/match.html
+++ b/public/match.html
@@ -13,41 +13,55 @@
       background: #1c1c1c;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
+  <script src="https://pl.90min.top/playenohlsrjs.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swarmcloud-hls@latest/dist/hls.light.min.js"></script>
 </head>
 
 <body>
-  <video controls id="video" autoplay></video>
+  <div id="player" style="width:100%;height:100%;"></div>
   <script>
-      var video = document.getElementById("video");
-      var videoSrc = "<REPLACE>";
-      if (Hls.isSupported()) {
-          var hls = new Hls();
-          hls.loadSource(videoSrc);
-          hls.attachMedia(video);
+  function initpljs() {
+      window.pljsinit = true
+      startPlayer()
+  }
 
-          hls.on(Hls.Events.ERROR, function (event, data) {
-            if (data.fatal) {
-              switch (data.type) {
-                case Hls.ErrorTypes.MEDIA_ERROR:
-                  console.log('fatal media error encountered, try to recover');
-                  hls.recoverMediaError();
+  function PlayerjsEvents(event, id, info) {
+      if (event) {
+          console.log("PlayerjsEvents_", event, id, info);
+          switch (event) {
+              case "init":
+                  initpljs();
                   break;
-                case Hls.ErrorTypes.NETWORK_ERROR:
-                  console.error('fatal network error encountered', data);
-                  hls.stopLoad();
-                  setTimeout(() => {
-                    hls.startLoad();
-                  }, 1000);
+              case "ui":
+                  if (window.pljsinit !== true) {
+                      initpljs();
+                  }
                   break;
-                default:
-                  hls.destroy();
+              case "new":
                   break;
-              }
-            }
           }
-        );
       }
+  }
+
+  var p2pConfig = {
+    logLevel: 'debug',
+    live: true, 
+  }
+  if (!Hls.P2pEngine.isMSESupported()) {
+      // use ServiceWorker based p2p engine if hls.js is not supported, need additional file sw.js
+      new Hls.P2pEngine.ServiceWorkerEngine(p2pConfig)
+  }
+  var videoSrc = "<REPLACE>";
+  var player = new Playerjs({
+      id:"player",
+      file: videoSrc, 
+      hlsconfig: {
+          maxBufferSize: 0,
+          maxBufferLength: 10,
+          liveSyncDurationCount: 10,
+          p2pConfig
+      }
+  });
   </script>
 </body>
 </html>
